[gd_scene load_steps=21 format=4 uid="uid://vkgple8hessc"]

[ext_resource type="Theme" uid="uid://qxewdenqjq8p" path="res://UI/maintheme.tres" id="1_coop4"]
[ext_resource type="FontFile" uid="uid://d2tec4pf7sd4c" path="res://resource/SmileySans-Oblique.ttf" id="1_iaef4"]
[ext_resource type="Script" uid="uid://f58gp81p7jqr" path="res://UI/title_screen.gd" id="2_5whv5"]
[ext_resource type="TileSet" uid="uid://gprcdj21o6xb" path="res://resource/worldtileset.tres" id="4_ywbsv"]
[ext_resource type="Texture2D" uid="uid://c82s1bfe0yiki" path="res://resource/Background2.png" id="5_5olrl"]
[ext_resource type="Texture2D" uid="uid://cm0rqlmbj5kyg" path="res://resource/Background.png" id="6_xc4vh"]
[ext_resource type="Texture2D" uid="uid://csqpk45tlvh25" path="res://resource/Tree-Assets.png" id="7_yo7wq"]
[ext_resource type="Texture2D" uid="uid://cuxbcd3oyu4cy" path="res://resource/char_blue_1.png" id="8_whjjw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q8y15"]
atlas = ExtResource("8_whjjw")
region = Rect2(0, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_k40b3"]
atlas = ExtResource("8_whjjw")
region = Rect2(56, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_73xgc"]
atlas = ExtResource("8_whjjw")
region = Rect2(112, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_oveyj"]
atlas = ExtResource("8_whjjw")
region = Rect2(168, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_d54vp"]
atlas = ExtResource("8_whjjw")
region = Rect2(224, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt3q4"]
atlas = ExtResource("8_whjjw")
region = Rect2(280, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy0ic"]
atlas = ExtResource("8_whjjw")
region = Rect2(336, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ia02"]
atlas = ExtResource("8_whjjw")
region = Rect2(392, 112, 56, 56)

[sub_resource type="SpriteFrames" id="SpriteFrames_jy01r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8y15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k40b3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73xgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oveyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d54vp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt3q4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy0ic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ia02")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_ywbsv"]
resource_name = "enter"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("V:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.6155721, 1),
"update": 0,
"values": [Vector2(396, 90), Vector2(302, 90)]
}

[sub_resource type="Animation" id="Animation_5olrl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("V:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(302, 90)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xc4vh"]
_data = {
&"RESET": SubResource("Animation_5olrl"),
&"enter": SubResource("Animation_ywbsv")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_coop4")
script = ExtResource("2_5whv5")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 37.0
offset_bottom = 86.0
grow_horizontal = 2
theme = ExtResource("1_coop4")
theme_override_colors/font_color = Color(0.09803921, 0.7448664, 1, 1)
theme_override_colors/font_shadow_color = Color(0.18431373, 0.16078432, 0.16078432, 0.88235295)
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("1_iaef4")
theme_override_font_sizes/font_size = 40
text = "勇者传说"
horizontal_alignment = 1

[node name="V" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -18.0
offset_right = -10.0
offset_bottom = 83.0
grow_horizontal = 0
grow_vertical = 2

[node name="newgame" type="Button" parent="V"]
layout_mode = 2
text = "新的故事"

[node name="loadgame" type="Button" parent="V"]
layout_mode = 2
text = "旧的回忆"

[node name="exitgame" type="Button" parent="V"]
layout_mode = 2
text = "离开游戏"

[node name="Graphics" type="Node2D" parent="."]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="TileMapLayer" type="TileMapLayer" parent="Graphics"]
show_behind_parent = true
position = Vector2(-54, 39)
tile_set = ExtResource("4_ywbsv")
metadata/_edit_group_ = true

[node name="ground" type="TileMapLayer" parent="Graphics/TileMapLayer"]
tile_map_data = PackedByteArray("AAACAAsAAAADAAQAAAACAAoAAAACAAMAAAACAAkAAAAFAAIAAAACAAgAAAAKAAAAAAACAAcAAAAFAAEAAAACAAYAAAAEAAMAAAACAAUAAAAEAAMAAAACAAQAAAAKAAAAAAACAAMAAAAEAAMAAAACAAIAAAAEAAMAAAABAAsAAAABAAQAAAABAAoAAAADAAMAAAABAAkAAAADAAIAAAABAAgAAAACAAMAAAABAAcAAAACAAMAAAABAAYAAAADAAIAAAABAAUAAAACAAMAAAABAAQAAAABAAIAAAABAAMAAAABAAIAAAABAAIAAAACAAMAAAAAAAsAAAAAAAQAAAAAAAoAAAAHAAEAAAAAAAkAAAAAAAMAAAAAAAgAAAAAAAMAAAAAAAcAAAAHAAEAAAAAAAYAAAAAAAMAAAAAAAUAAAAHAAEAAAAAAAQAAAAIAAAAAAAAAAMAAAAAAAMAAAAAAAIAAAAHAAEAAAAuAAsAAAABAAQAAAAuAAoAAAADAAMAAAAuAAkAAAACAAAAAAAtAAsAAAAGAAAAAAAtAAoAAAACAAIAAAAtAAkAAAACAAAAAAAsAAsAAAACAAQAAAAsAAoAAAABAAIAAAAsAAkAAAADAAAAAAArAAsAAAABAAQAAAArAAoAAAABAAIAAAArAAkAAAABAAAAAAAqAAsAAAACAAQAAAAqAAoAAAABAAIAAAAqAAkAAAAGAAEAAAApAAsAAAACAAQAAAApAAoAAAABAAIAAAApAAkAAAADAAAAAAAoAAsAAAABAAQAAAAoAAoAAAACAAMAAAAoAAkAAAABAAAAAAAnAAsAAAADAAQAAAAnAAoAAAABAAMAAAAnAAkAAAACAAAAAAAmAAsAAAACAAQAAAAmAAoAAAADAAIAAAAmAAkAAAADAAAAAAAlAAsAAAACAAQAAAAlAAoAAAADAAMAAAAlAAkAAAADAAAAAAAkAAsAAAADAAQAAAAkAAoAAAACAAIAAAAkAAkAAAABAAAAAAAjAAsAAAACAAQAAAAjAAoAAAABAAIAAAAjAAkAAAACAAAAAAAiAAsAAAABAAQAAAAiAAoAAAADAAMAAAAiAAkAAAACAAAAAAAhAAsAAAAGAAAAAAAhAAoAAAABAAIAAAAhAAkAAAADAAAAAAAgAAsAAAAGAAAAAAAgAAoAAAADAAIAAAAgAAkAAAACAAAAAAAfAAsAAAADAAQAAAAfAAoAAAADAAMAAAAfAAkAAAACAAAAAAAeAAsAAAACAAQAAAAeAAoAAAADAAIAAAAeAAkAAAAGAAEAAAAdAAsAAAABAAQAAAAdAAoAAAABAAMAAAAdAAkAAAAGAAEAAAAcAAsAAAAGAAAAAAAcAAoAAAABAAMAAAAcAAkAAAADAAAAAAAbAAsAAAADAAQAAAAbAAoAAAACAAIAAAAbAAkAAAABAAAAAAAaAAsAAAAGAAAAAAAaAAoAAAACAAIAAAAaAAkAAAABAAAAAAAZAAsAAAACAAQAAAAZAAoAAAABAAIAAAAZAAkAAAACAAAAAAAYAAsAAAADAAQAAAAYAAoAAAADAAMAAAAYAAkAAAACAAAAAAAXAAsAAAABAAQAAAAXAAoAAAACAAMAAAAXAAkAAAADAAAAAAAWAAsAAAAGAAAAAAAWAAoAAAADAAIAAAAWAAkAAAACAAAAAAAVAAsAAAACAAQAAAAVAAoAAAACAAIAAAAVAAkAAAABAAAAAAAUAAsAAAACAAQAAAAUAAoAAAACAAMAAAAUAAkAAAABAAAAAAATAAsAAAABAAQAAAATAAoAAAACAAIAAAATAAkAAAABAAAAAAASAAsAAAACAAQAAAASAAoAAAACAAIAAAASAAkAAAACAAAAAAARAAsAAAADAAQAAAARAAoAAAADAAMAAAARAAkAAAADAAAAAAAQAAsAAAACAAQAAAAQAAoAAAACAAIAAAAQAAkAAAABAAAAAAAPAAsAAAAGAAAAAAAPAAoAAAACAAMAAAAPAAkAAAAGAAEAAAAOAAsAAAABAAQAAAAOAAoAAAACAAMAAAAOAAkAAAAGAAEAAAANAAsAAAACAAQAAAANAAoAAAADAAIAAAANAAkAAAACAAAAAAAMAAsAAAACAAQAAAAMAAoAAAABAAIAAAAMAAkAAAACAAAAAAALAAsAAAADAAQAAAALAAoAAAABAAMAAAALAAkAAAACAAAAAAAKAAsAAAACAAQAAAAKAAoAAAABAAMAAAAKAAkAAAACAAAAAAAJAAsAAAACAAQAAAAJAAoAAAABAAMAAAAJAAkAAAADAAAAAAAIAAsAAAADAAQAAAAIAAoAAAACAAIAAAAIAAkAAAADAAAAAAAHAAsAAAABAAQAAAAHAAoAAAADAAMAAAAHAAkAAAABAAAAAAAGAAsAAAAGAAAAAAAGAAoAAAADAAIAAAAGAAkAAAAGAAEAAAAFAAsAAAABAAQAAAAFAAoAAAABAAIAAAAFAAkAAAABAAAAAAAEAAsAAAABAAQAAAAEAAoAAAABAAIAAAAEAAkAAAABAAAAAAADAAsAAAACAAQAAAADAAoAAAADAAIAAAADAAkAAAAGAAEAAAAwAAsAAAAEAAQAAAAwAAoAAAAEAAIAAAAwAAkAAAAEAAMAAAAwAAgAAAAEAAMAAAAwAAcAAAAKAAAAAAAwAAYAAAAFAAEAAAAwAAUAAAAEAAIAAAAwAAQAAAAFAAEAAAAwAAMAAAAFAAEAAAAwAAIAAAAEAAIAAAAwAAEAAAAFAAEAAAAwAAAAAAAEAAMAAAAwAP//AAAFAAEAAAAwAP7/AAAKAAAAAAAwAP3/AAAEAAMAAAAwAPz/AAAEAAIAAAAwAPv/AAAEAAIAAAAwAPr/AAAFAAEAAAAwAPn/AAAEAAIAAAAwAPj/AAAEAAIAAAAvAAsAAAAGAAAAAAAvAAoAAAADAAMAAAAvAAkAAAAHAAIAAAAvAAgAAAAHAAEAAAAvAAcAAAAIAAEAAAAvAAYAAAAAAAIAAAAvAAUAAAAIAAEAAAAvAAQAAAAIAAAAAAAvAAMAAAAHAAAAAAAvAAIAAAAHAAIAAAAvAAEAAAAHAAEAAAAvAAAAAAAAAAIAAAAvAP//AAAAAAIAAAAvAP7/AAAHAAEAAAAvAP3/AAAHAAEAAAAvAPz/AAAAAAIAAAAvAPv/AAAAAAMAAAAvAPr/AAAAAAIAAAAvAPn/AAAIAAEAAAAvAPj/AAAHAAEAAAADAAEAAAACAAQAAAADAAAAAAADAAAAAAACAAEAAAAFAAAAAAACAAAAAAAFAAIAAAACAP//AAAKAAAAAAABAAEAAAACAAMAAAABAAAAAAACAAMAAAABAP//AAACAAIAAAAAAAEAAAAAAAMAAAAAAAAAAAAIAAAAAAAAAP//AAAAAAMAAAAuAAMAAAABAAQAAAAtAAMAAAADAAQAAAAsAAMAAAABAAQAAAArAAMAAAADAAQAAAAqAAMAAAACAAQAAAApAAMAAAAGAAAAAAAmAAIAAAAFAAIAAAAmAAEAAAAEAAIAAAAmAAAAAAAFAAEAAAAmAP//AAAEAAAAAAAlAAIAAAAIAAEAAAAlAAEAAAAAAAMAAAAlAAAAAAAAAAIAAAAlAP//AAAAAAAAAAAoAAMAAAACAAQAAAAnAAMAAAADAAQAAAAmAAMAAAADAAQAAAAlAAMAAAAAAAQAAAAkAPv/AAAEAAQAAAAkAPr/AAAEAAAAAAAjAPv/AAAGAAAAAAAjAPr/AAADAAAAAAAiAPv/AAABAAQAAAAiAPr/AAACAAAAAAAhAPv/AAACAAQAAAAhAPr/AAAGAAEAAAAgAPv/AAACAAQAAAAgAPr/AAABAAAAAAAfAPv/AAADAAQAAAAfAPr/AAACAAAAAAAeAPv/AAABAAQAAAAeAPr/AAACAAAAAAAdAPv/AAAGAAAAAAAdAPr/AAADAAAAAAAcAPv/AAABAAQAAAAcAPr/AAACAAAAAAAbAPv/AAABAAQAAAAbAPr/AAADAAAAAAAaAPv/AAAGAAAAAAAaAPr/AAACAAAAAAAZAPv/AAABAAQAAAAZAPr/AAAGAAEAAAAYAPv/AAAGAAAAAAAYAPr/AAAFAAIAAAAYAPn/AAAEAAMAAAAYAPj/AAAEAAMAAAAYAPf/AAAFAAEAAAAYAPb/AAAEAAIAAAAYAPX/AAAEAAMAAAAYAPT/AAAEAAIAAAAXAPv/AAAAAAQAAAAXAPr/AAAAAAMAAAAXAPn/AAAAAAIAAAAXAPj/AAAHAAAAAAAXAPf/AAAHAAIAAAAXAPb/AAAHAAEAAAAXAPX/AAAHAAEAAAAXAPT/AAAAAAIAAAACAP7/AAAEAAIAAAACAP3/AAAKAAEAAAACAPz/AAAFAAEAAAACAPv/AAAFAAAAAAACAPr/AAAFAAIAAAACAPn/AAAEAAIAAAACAPj/AAAEAAIAAAACAPf/AAAFAAEAAAACAPb/AAAFAAEAAAACAPX/AAAEAAMAAAACAPT/AAAEAAMAAAACAPP/AAAEAAMAAAACAPL/AAAFAAAAAAACAPH/AAACAAMAAAACAPD/AAAGAAEAAAABAP7/AAADAAIAAAABAP3/AAABAAIAAAABAPz/AAADAAIAAAABAPv/AAABAAMAAAABAPr/AAADAAIAAAABAPn/AAADAAIAAAABAPj/AAACAAMAAAABAPf/AAACAAMAAAABAPb/AAABAAIAAAABAPX/AAACAAMAAAABAPT/AAACAAIAAAABAPP/AAACAAIAAAABAPL/AAACAAIAAAABAPH/AAABAAIAAAABAPD/AAADAAAAAAAAAP7/AAAAAAMAAAAAAP3/AAAHAAEAAAAAAPz/AAAAAAMAAAAAAPv/AAAHAAEAAAAAAPr/AAAHAAEAAAAAAPn/AAAAAAIAAAAAAPj/AAAAAAMAAAAAAPf/AAAAAAMAAAAAAPb/AAAIAAAAAAAAAPX/AAAAAAIAAAAAAPT/AAAAAAIAAAAAAPP/AAAAAAIAAAAAAPL/AAAAAAIAAAAAAPH/AAAAAAMAAAAAAPD/AAAAAAAAAAAwAPL/AAAEAAMAAAAwAPH/AAAEAAMAAAAwAPD/AAAEAAAAAAAvAPL/AAAHAAAAAAAvAPH/AAABAAIAAAAvAPD/AAACAAAAAAAuAPL/AAAGAAAAAAAuAPH/AAADAAIAAAAuAPD/AAACAAAAAAAtAPL/AAABAAQAAAAtAPH/AAACAAMAAAAtAPD/AAACAAAAAAAsAPL/AAADAAQAAAAsAPH/AAACAAMAAAAsAPD/AAAGAAEAAAArAPL/AAADAAQAAAArAPH/AAABAAIAAAArAPD/AAACAAAAAAAqAPL/AAACAAQAAAAqAPH/AAACAAIAAAAqAPD/AAACAAAAAAApAPL/AAADAAQAAAApAPH/AAADAAIAAAApAPD/AAABAAAAAAAoAPL/AAACAAQAAAAoAPH/AAABAAIAAAAoAPD/AAADAAAAAAAnAPL/AAACAAQAAAAnAPH/AAACAAMAAAAnAPD/AAACAAAAAAAmAPL/AAAGAAAAAAAmAPH/AAACAAMAAAAmAPD/AAAGAAEAAAAlAPL/AAACAAQAAAAlAPH/AAABAAIAAAAlAPD/AAACAAAAAAAkAPL/AAABAAQAAAAkAPH/AAADAAIAAAAkAPD/AAADAAAAAAAjAPL/AAADAAQAAAAjAPH/AAACAAIAAAAjAPD/AAADAAAAAAAiAPL/AAADAAQAAAAiAPH/AAABAAIAAAAiAPD/AAAGAAEAAAAhAPL/AAABAAQAAAAhAPH/AAADAAMAAAAhAPD/AAABAAAAAAAgAPL/AAABAAQAAAAgAPH/AAACAAIAAAAgAPD/AAABAAAAAAAfAPL/AAAGAAAAAAAfAPH/AAACAAIAAAAfAPD/AAADAAAAAAAeAPL/AAAGAAAAAAAeAPH/AAADAAIAAAAeAPD/AAAGAAEAAAAdAPL/AAAGAAAAAAAdAPH/AAADAAMAAAAdAPD/AAAGAAEAAAAcAPL/AAAGAAAAAAAcAPH/AAACAAMAAAAcAPD/AAACAAAAAAAbAPL/AAAGAAAAAAAbAPH/AAACAAIAAAAbAPD/AAADAAAAAAAaAPL/AAADAAQAAAAaAPH/AAABAAIAAAAaAPD/AAAGAAEAAAAZAPL/AAACAAQAAAAZAPH/AAABAAIAAAAZAPD/AAABAAAAAAAYAPL/AAAFAAAAAAAYAPH/AAABAAIAAAAYAPD/AAAGAAEAAAAXAPL/AAAHAAAAAAAXAPH/AAADAAIAAAAXAPD/AAACAAAAAAAWAPL/AAABAAQAAAAWAPH/AAADAAIAAAAWAPD/AAAGAAEAAAAVAPL/AAACAAQAAAAVAPH/AAADAAIAAAAVAPD/AAACAAAAAAAUAPL/AAACAAQAAAAUAPH/AAACAAIAAAAUAPD/AAAGAAEAAAATAPL/AAADAAQAAAATAPH/AAABAAIAAAATAPD/AAACAAAAAAASAPL/AAACAAQAAAASAPH/AAABAAIAAAASAPD/AAACAAAAAAARAPL/AAADAAQAAAARAPH/AAACAAMAAAARAPD/AAADAAAAAAAQAPL/AAADAAQAAAAQAPH/AAADAAIAAAAQAPD/AAADAAAAAAAPAPL/AAADAAQAAAAPAPH/AAABAAIAAAAPAPD/AAAGAAEAAAAOAPL/AAABAAQAAAAOAPH/AAACAAIAAAAOAPD/AAABAAAAAAANAPL/AAADAAQAAAANAPH/AAABAAMAAAANAPD/AAAGAAEAAAAMAPL/AAACAAQAAAAMAPH/AAABAAIAAAAMAPD/AAACAAAAAAALAPL/AAACAAQAAAALAPH/AAACAAMAAAALAPD/AAAGAAEAAAAKAPL/AAAGAAAAAAAKAPH/AAACAAMAAAAKAPD/AAABAAAAAAAJAPL/AAADAAQAAAAJAPH/AAABAAIAAAAJAPD/AAADAAAAAAAIAPL/AAAGAAAAAAAIAPH/AAABAAIAAAAIAPD/AAABAAAAAAAHAPL/AAABAAQAAAAHAPH/AAACAAMAAAAHAPD/AAABAAAAAAAGAPL/AAACAAQAAAAGAPH/AAABAAIAAAAGAPD/AAADAAAAAAAFAPL/AAADAAQAAAAFAPH/AAADAAIAAAAFAPD/AAABAAAAAAAEAPL/AAADAAQAAAAEAPH/AAABAAIAAAAEAPD/AAADAAAAAAADAPL/AAACAAQAAAADAPH/AAADAAMAAAADAPD/AAADAAAAAAAwAPf/AAAFAAEAAAAwAPb/AAAEAAMAAAAwAPX/AAAFAAEAAAAwAPT/AAAEAAIAAAAwAPP/AAAKAAEAAAAvAPf/AAAHAAAAAAAvAPb/AAAHAAIAAAAvAPX/AAAAAAIAAAAvAPT/AAAAAAIAAAAvAPP/AAAAAAMAAAAYAPP/AAAEAAMAAAAXAPP/AAAAAAIAAAAWAPj/AAACAAQAAAAWAPf/AAADAAAAAAAVAPj/AAAGAAAAAAAVAPf/AAACAAAAAAAUAPj/AAACAAQAAAAUAPf/AAAGAAEAAAATAPj/AAAGAAAAAAATAPf/AAADAAAAAAASAPj/AAABAAQAAAASAPf/AAAGAAEAAAARAPj/AAADAAQAAAARAPf/AAADAAAAAAAQAPj/AAABAAQAAAAQAPf/AAAGAAEAAAAPAPj/AAAGAAAAAAAPAPf/AAAGAAEAAAAOAPj/AAACAAQAAAAOAPf/AAABAAAAAAANAPj/AAACAAQAAAANAPf/AAADAAAAAAAMAPj/AAACAAQAAAAMAPf/AAADAAAAAAALAPj/AAADAAQAAAALAPf/AAACAAAAAAAKAPj/AAAAAAQAAAAKAPf/AAAAAAAAAAAFAPv/AAAEAAQAAAAFAPr/AAAEAAAAAAAEAPv/AAAGAAAAAAAEAPr/AAAGAAEAAAADAPv/AAAGAAAAAAADAPr/AAACAAAAAAAuAPf/AAADAAQAAAAuAPb/AAAGAAEAAAAtAPf/AAAGAAAAAAAtAPb/AAACAAAAAAAsAPf/AAACAAQAAAAsAPb/AAADAAAAAAArAPf/AAABAAQAAAArAPb/AAACAAAAAAAqAPf/AAABAAQAAAAqAPb/AAAGAAEAAAApAPf/AAAAAAQAAAApAPb/AAAAAAAAAAAuAAIAAAABAAAAAAAtAAIAAAADAAAAAAAsAAIAAAAGAAEAAAArAAIAAAAGAAEAAAAqAAIAAAACAAAAAAApAAIAAAADAAAAAAAoAAIAAAABAAAAAAAnAAIAAAACAAAAAAAhAAUAAAAEAAQAAAAhAAQAAAAEAAAAAAAgAAUAAAADAAQAAAAgAAQAAAAGAAEAAAAfAAUAAAACAAQAAAAfAAQAAAACAAAAAAAeAAUAAAADAAQAAAAeAAQAAAABAAAAAAAdAAUAAAAAAAQAAAAdAAQAAAAAAAAAAAA=")
tile_set = ExtResource("4_ywbsv")

[node name="mushroom" type="TileMapLayer" parent="Graphics/TileMapLayer"]
tile_map_data = PackedByteArray("AAADAAgAAAAKAAIAAAAFAAgAAAAJAAIAAAAHAAgAAAAIAAIAAAASAAgAAAAIAAIAAAAjAAgAAAAIAAIAAAAkAAgAAAAIAAIAAAAmAAgAAAAJAAIAAAApAAgAAAAGAAMAAAAtAAgAAAAHAAMAAAApAAEAAAAKAAIAAAAsAAEAAAAKAAIAAAAtAAEAAAAGAAMAAAAlAP7/AAAGAAMAAAALAPb/AAAGAAMAAAAOAPb/AAAJAAMAAAAPAPb/AAAIAAIAAAASAPb/AAAGAAMAAAAVAPb/AAAJAAMAAAAEAPn/AAAIAAMAAAAZAPn/AAAJAAMAAAAaAPn/AAAJAAMAAAAcAPn/AAAHAAMAAAAdAPn/AAAHAAMAAAAfAPn/AAAKAAIAAAA=")
tile_set = ExtResource("4_ywbsv")

[node name="leaves" type="TileMapLayer" parent="Graphics/TileMapLayer"]
tile_map_data = PackedByteArray("AAAlAAgAAAALAAcAAAAlAAcAAAAJAAQAAAAlAAYAAAAJAAUAAAAkAAgAAAAMAAQAAAAkAAcAAAALAAQAAAAkAAYAAAALAAQAAAAjAAgAAAAJAAcAAAAjAAcAAAAKAAQAAAAjAAYAAAAKAAUAAAAiAAcAAAAJAAgAAAAiAAYAAAAJAAYAAAAmAAYAAAALAAYAAAAmAAcAAAALAAgAAAAbAAgAAAAKAAcAAAAaAAgAAAAJAAcAAAAbAAcAAAAKAAYAAAAaAAcAAAAJAAYAAAAcAAgAAAALAAcAAAAcAAcAAAALAAYAAAAWAPz/AAAKAAgAAAAWAPv/AAAKAAYAAAAVAPz/AAAKAAgAAAAVAPv/AAAKAAYAAAAUAPz/AAAKAAgAAAAUAPv/AAAKAAYAAAATAPz/AAAKAAgAAAATAPv/AAAKAAYAAAASAPz/AAAJAAgAAAASAPv/AAAJAAYAAAAhAP//AAALAAgAAAAhAP7/AAAJAAQAAAAhAP3/AAAJAAUAAAAhAPz/AAALAAcAAAAgAP//AAAKAAgAAAAgAP7/AAALAAUAAAAgAP3/AAAMAAUAAAAgAPz/AAAMAAUAAAAfAP//AAAJAAgAAAAfAP7/AAAKAAQAAAAfAP3/AAAKAAUAAAAfAPz/AAAJAAcAAAAeAP3/AAAKAAYAAAAeAP7/AAAKAAgAAAAiAP3/AAALAAYAAAAiAP7/AAALAAgAAAAdAP3/AAAJAAYAAAAdAP7/AAAJAAgAAAAXAPz/AAAKAAgAAAAXAPv/AAAKAAYAAAAhAPv/AAALAAYAAAAgAPv/AAAKAAYAAAAfAPv/AAAJAAYAAAAYAPz/AAALAAgAAAAYAPv/AAALAAYAAAAcAAkAAAALAAgAAAAbAAkAAAAKAAgAAAAaAAkAAAAJAAgAAAAlAAkAAAALAAgAAAAkAAkAAAAKAAgAAAAjAAkAAAAJAAgAAAAlAAUAAAALAAYAAAAkAAUAAAAKAAYAAAAjAAUAAAAJAAYAAAAHAPz/AAALAAgAAAAHAPv/AAALAAcAAAAHAPr/AAALAAYAAAAGAPz/AAAKAAgAAAAGAPv/AAAMAAUAAAAGAPr/AAAKAAYAAAAFAPz/AAAJAAgAAAAFAPv/AAAKAAQAAAAFAPr/AAAKAAYAAAAEAPv/AAAKAAgAAAAEAPr/AAAKAAYAAAADAPv/AAAJAAgAAAADAPr/AAAJAAYAAAAIAPT/AAALAAgAAAAIAPP/AAALAAcAAAAIAPL/AAALAAcAAAAIAPH/AAALAAYAAAAHAPT/AAAKAAgAAAAHAPP/AAAMAAQAAAAHAPL/AAAMAAQAAAAHAPH/AAAKAAYAAAAGAPT/AAAKAAgAAAAGAPP/AAALAAUAAAAGAPL/AAALAAUAAAAGAPH/AAAKAAYAAAAFAPT/AAAKAAgAAAAFAPP/AAAKAAcAAAAFAPL/AAALAAQAAAAFAPH/AAAKAAYAAAAEAPT/AAAKAAgAAAAEAPP/AAAKAAcAAAAEAPL/AAALAAQAAAAEAPH/AAAKAAYAAAADAPT/AAAJAAgAAAADAPP/AAAJAAcAAAADAPL/AAAJAAcAAAADAPH/AAAJAAYAAAAUAPP/AAALAAgAAAAUAPL/AAALAAcAAAAUAPH/AAALAAYAAAATAPP/AAAKAAgAAAATAPL/AAAMAAUAAAATAPH/AAAKAAYAAAASAPP/AAAKAAgAAAASAPL/AAAKAAcAAAASAPH/AAAKAAYAAAARAPP/AAAJAAgAAAARAPL/AAAJAAcAAAARAPH/AAAJAAYAAAAfAPX/AAALAAgAAAAfAPT/AAALAAcAAAAfAPP/AAALAAcAAAAfAPL/AAALAAYAAAAeAPX/AAAKAAgAAAAeAPT/AAAMAAUAAAAeAPP/AAAKAAcAAAAeAPL/AAAKAAYAAAAdAPX/AAAJAAgAAAAdAPT/AAAJAAcAAAAdAPP/AAAJAAcAAAAdAPL/AAAJAAYAAAAnAPX/AAALAAgAAAAnAPT/AAALAAcAAAAnAPP/AAALAAcAAAAnAPL/AAALAAcAAAAnAPH/AAALAAYAAAAmAPX/AAAJAAgAAAAmAPT/AAAJAAcAAAAmAPP/AAAJAAcAAAAmAPL/AAAJAAcAAAAmAPH/AAAJAAYAAAAuAPr/AAALAAgAAAAuAPn/AAALAAcAAAAuAPj/AAALAAcAAAAuAPf/AAALAAYAAAAtAPr/AAAJAAgAAAAtAPn/AAAJAAcAAAAtAPj/AAAJAAcAAAAtAPf/AAAJAAYAAAAvAP3/AAALAAYAAAAuAP3/AAAKAAYAAAAtAP3/AAAJAAYAAAAvAP//AAALAAgAAAAvAP7/AAALAAcAAAAuAP//AAAKAAgAAAAuAP7/AAAKAAcAAAAtAP//AAAJAAgAAAAtAP7/AAAJAAcAAAAMAPr/AAAKAAQAAAAMAPn/AAAKAAcAAAAMAPj/AAAMAAQAAAAMAPf/AAAKAAYAAAANAPr/AAALAAcAAAANAPn/AAALAAcAAAANAPj/AAALAAcAAAANAPf/AAALAAYAAAALAPr/AAAJAAgAAAALAPn/AAAJAAcAAAALAPj/AAAJAAcAAAALAPf/AAAJAAYAAAANAPz/AAALAAgAAAANAPv/AAALAAcAAAAMAPz/AAAJAAgAAAAMAPv/AAAJAAcAAAA=")
tile_set = ExtResource("4_ywbsv")

[node name="background" type="Node2D" parent="Graphics"]
z_index = -1
position = Vector2(-54, 39)
metadata/_edit_group_ = true

[node name="sky" type="Parallax2D" parent="Graphics/background"]
scroll_scale = Vector2(0.3, 0.1)
repeat_size = Vector2(480, 0)

[node name="Background2" type="Sprite2D" parent="Graphics/background/sky"]
position = Vector2(-5, -119)
texture = ExtResource("5_5olrl")
centered = false

[node name="hills" type="Parallax2D" parent="Graphics/background"]
scroll_scale = Vector2(0.4, 0.2)
repeat_size = Vector2(384, 0)

[node name="Background" type="Sprite2D" parent="Graphics/background/hills"]
z_index = -1
texture = ExtResource("6_xc4vh")
centered = false
region_enabled = true
region_rect = Rect2(800, 0, 96, 256)

[node name="Background2" type="Sprite2D" parent="Graphics/background/hills"]
z_index = -1
position = Vector2(96, 0)
texture = ExtResource("6_xc4vh")
centered = false
region_enabled = true
region_rect = Rect2(800, 0, 96, 256)

[node name="Background3" type="Sprite2D" parent="Graphics/background/hills"]
z_index = -1
position = Vector2(192, 0)
texture = ExtResource("6_xc4vh")
centered = false
region_enabled = true
region_rect = Rect2(800, 0, 96, 256)

[node name="Background4" type="Sprite2D" parent="Graphics/background/hills"]
z_index = -1
position = Vector2(288, 0)
texture = ExtResource("6_xc4vh")
centered = false
region_enabled = true
region_rect = Rect2(800, 0, 96, 256)

[node name="tree" type="Parallax2D" parent="Graphics/background"]
scroll_scale = Vector2(0.6, 0.3)
repeat_size = Vector2(384, 0)

[node name="Background" type="Sprite2D" parent="Graphics/background/tree"]
position = Vector2(0, 55)
texture = ExtResource("6_xc4vh")
centered = false
region_enabled = true
region_rect = Rect2(112, 0, 96, 256)

[node name="Background2" type="Sprite2D" parent="Graphics/background/tree"]
position = Vector2(96, 55)
texture = ExtResource("6_xc4vh")
centered = false
region_enabled = true
region_rect = Rect2(112, 0, 96, 256)

[node name="Background3" type="Sprite2D" parent="Graphics/background/tree"]
position = Vector2(192, 55)
texture = ExtResource("6_xc4vh")
centered = false
region_enabled = true
region_rect = Rect2(112, 0, 96, 256)

[node name="Background4" type="Sprite2D" parent="Graphics/background/tree"]
position = Vector2(288, 55)
texture = ExtResource("6_xc4vh")
centered = false
region_enabled = true
region_rect = Rect2(112, 0, 96, 256)

[node name="bushes" type="Parallax2D" parent="Graphics/background"]
scroll_scale = Vector2(0.9, 0.9)

[node name="TreeAssets" type="Sprite2D" parent="Graphics/background/bushes"]
position = Vector2(137, 146)
texture = ExtResource("7_yo7wq")
region_enabled = true
region_rect = Rect2(210, 5, 124, 86)

[node name="TreeAssets2" type="Sprite2D" parent="Graphics/background/bushes"]
position = Vector2(229, 144)
texture = ExtResource("7_yo7wq")
region_enabled = true
region_rect = Rect2(210, 101, 124, 86)

[node name="TreeAssets3" type="Sprite2D" parent="Graphics/background/bushes"]
position = Vector2(609, 29)
texture = ExtResource("7_yo7wq")
region_enabled = true
region_rect = Rect2(210, 197, 124, 86)

[node name="TreeAssets4" type="Sprite2D" parent="Graphics/background/bushes"]
position = Vector2(358, 150)
texture = ExtResource("7_yo7wq")
region_enabled = true
region_rect = Rect2(210, 5, 124, 86)

[node name="TreeAssets5" type="Sprite2D" parent="Graphics/background/bushes"]
position = Vector2(39, -100)
texture = ExtResource("7_yo7wq")
region_enabled = true
region_rect = Rect2(210, 5, 124, 86)

[node name="TreeAssets6" type="Sprite2D" parent="Graphics/background/bushes"]
position = Vector2(286, -127)
texture = ExtResource("7_yo7wq")
region_enabled = true
region_rect = Rect2(210, 293, 124, 86)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Graphics"]
position = Vector2(81, 157)
sprite_frames = SubResource("SpriteFrames_jy01r")
autoplay = "default"

[node name="forground" type="Node2D" parent="Graphics"]
position = Vector2(-54, 39)
metadata/_edit_group_ = true

[node name="Parallax2D" type="Parallax2D" parent="Graphics/forground"]
scroll_scale = Vector2(1.1, 1.1)

[node name="TreeAssets" type="Sprite2D" parent="Graphics/forground/Parallax2D"]
position = Vector2(152, 180)
texture = ExtResource("7_yo7wq")
region_enabled = true
region_rect = Rect2(210, 5, 124, 86)

[node name="TreeAssets2" type="Sprite2D" parent="Graphics/forground/Parallax2D"]
position = Vector2(23, 171)
texture = ExtResource("7_yo7wq")
region_enabled = true
region_rect = Rect2(210, 5, 124, 86)

[node name="TreeAssets3" type="Sprite2D" parent="Graphics/forground/Parallax2D"]
position = Vector2(278, 164)
texture = ExtResource("7_yo7wq")
region_enabled = true
region_rect = Rect2(210, 197, 124, 86)

[node name="TreeAssets6" type="Sprite2D" parent="Graphics/forground/Parallax2D"]
position = Vector2(19, 10)
texture = ExtResource("7_yo7wq")
region_enabled = true
region_rect = Rect2(210, 197, 124, 86)

[node name="TreeAssets7" type="Sprite2D" parent="Graphics/forground/Parallax2D"]
position = Vector2(770, 64)
texture = ExtResource("7_yo7wq")
region_enabled = true
region_rect = Rect2(210, 197, 124, 86)

[node name="TreeAssets4" type="Sprite2D" parent="Graphics/forground/Parallax2D"]
position = Vector2(411, 180)
texture = ExtResource("7_yo7wq")
region_enabled = true
region_rect = Rect2(210, 5, 124, 86)

[node name="TreeAssets5" type="Sprite2D" parent="Graphics/forground/Parallax2D"]
position = Vector2(582, 189)
texture = ExtResource("7_yo7wq")
region_enabled = true
region_rect = Rect2(210, 197, 124, 86)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xc4vh")
}
autoplay = "enter"

[connection signal="pressed" from="V/newgame" to="." method="_on_newgame_pressed"]
[connection signal="pressed" from="V/loadgame" to="." method="_on_loadgame_pressed"]
[connection signal="pressed" from="V/exitgame" to="." method="_on_exitgame_pressed"]
